--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,15 +68,10 @@ hr {
     background-color: #ffffff;
     border-color: #dddddd;
     color: #777777;
-    width:960px;
-    position: relative;
-    top: 23%;
-    float:left;
-    margin:30px 0 0 180px;
-    height: 650px;
+    margin:40px 70px 70px 70px;
+    height: 400px;
     
   }
-
 
   #bioImage{
       width:110px;
@@ -84,6 +79,10 @@ hr {
       padding: 5px 20px 15px;
   }
 
+  .img-thumbnail{
+      margin: 10px 20px 20px 20px;
+  }
+  
   p{
       font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
       padding: 5px;
@@ -133,7 +132,7 @@ hr {
     color:white;
     font-size:10px; 
     text-align: center;
-
+    line-height: 35px;
     height:45px;
     border-top-width: 8px;
     border-top-style: solid;
