--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,67 +5,33 @@ body{
     
 }
 
-/* Top navigation bar for non bootstrap 
-.navbarTop {
-    overflow:hidden;
-    background-color:#ffffff;
-    border-color: #cccccc;
-    
-    
-}
-*/
-
-/*Navbar Links non boostrap
-.navbarTop a{
-
-color: #cccccc;
-margin: 20px 12px 20px 0;
-font-size: 15px;
-font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-color:#4aaaa5;
-font-weight: bold;
-text-decoration: none;
-position:relative;
-}
-*/
-
-/* non bootstrap site
- .navbarLinks {
-     float:right;   
-     margin: 25px 100px 0 0 ;
- }
-*/
  .nav-item{
-    font-size: 15px;
+    font-size: 18px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    font-weight: bold; 
+    font-weight: bold;
+     
  }
  a:hover {
-     color:#4aaaa5;
+     color:#4aaaa5 !important;
  }
 
 
 #name{
     font-family: 'Georgia', Times, Times New Roman, serif;
-    width:140px;
+    width:160px;
     font-size: 22px;
     background-color: #4aaaa5;
     color:#ffffff;
     font-weight: bold;
     padding: 15px;
-    margin:8px 0 0 180px;
-    position: relative;
-    float: left;
+    margin:0 0 0 58px;
+    
     
 }
 
-.navbar-brand{
-font-family: 'Georgia', Times, Times New Roman, serif;
-font-size: 22px;
-background-color: #4aaaa5;
-color:#ffffff;
-font-weight: bold;
-padding: 15px;
+.active a{
+    color: #4aaaa5 !important;
+
 }
 
 #about {
@@ -88,19 +54,10 @@ hr {
     color: #777777;
     margin:40px 70px 70px 70px;
     padding: 0 30px 10px 10px;
-    
-    
+   
   }
 
-  #bioImage{
-      width:110px;
-      height: 120px;
-      padding: 5px 20px 15px;
-  }
 
-  .img-thumbnail{
-      margin: 10px 20px 20px 20px;
-  }
   
   p{
       font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -131,16 +88,7 @@ hr {
     font-weight: bold;  
 }
 
-.imgLabel{
-    position: absolute;
-    top: 80%;
-    left: 52%;
-    transform: translate(-50%, -50%);
-    background-color:#cccccc;
-    width:200px;
-    height:25px;
-    
-}
+
 
 .footer{
     overflow:hidden;
@@ -250,3 +198,23 @@ button:hover{
     border-color: #dddddd;
 }
 
+
+.img-thumbnail{
+  position: relative;  
+}
+
+.thumbnail {
+    position: relative;
+}
+
+
+.imgLabel{
+    position: absolute;
+    top: 80%;
+    background-color:#4aaaa5;
+    width: 92%;
+    text-align: center;
+    color:white;
+    
+      
+}
